# masters-wasi-security-benchmark

./: Cargo.toml  LICENSE  argument-1-all-defined.yaml  argument-1.yaml  argument-3.yaml  argument-all-no-constraint.yaml  argument-all.yaml  function.yaml
benches/: host_call.rs
src/: lib.rs  main.rs
